Add courses carcass

--- a/MedicineSchedule/MedicineSchedule/MedicineSchedule.csproj
+++ b/MedicineSchedule/MedicineSchedule/MedicineSchedule.csproj
@@ -22,5 +22,12 @@
     <EmbeddedResource Update="Pages\ReceptionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\CourseView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
