--- a/MedicineSchedule/MedicineSchedule/MedicineSchedule.csproj
+++ b/MedicineSchedule/MedicineSchedule/MedicineSchedule.csproj
@@ -30,4 +30,10 @@
   <ItemGroup>
     <Folder Include="Services\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Mono.Android">
+      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\MonoAndroid\v11.0\Mono.Android.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
