Add simple notification

--- a/MedicineSchedule/MedicineSchedule/MedicineSchedule.csproj
+++ b/MedicineSchedule/MedicineSchedule/MedicineSchedule.csproj
@@ -26,6 +26,9 @@
     <EmbeddedResource Update="Pages\CoursesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\NotificationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\ReceptionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
